# foam-ssg

./: CLAUDE.md  LICENSE  README.md  example-notes.md  foam-ssg-extended.py  foam-ssg-readme.md  foam-ssg.py  plantuml-setup.sh  pyproject.toml  requirements-txt.txt  setup-mamba.sh  setup-uv.sh  setup.sh
_site/: index.html  search-index.json
_site/concepts/: markdown.html  wiki-links.html
_site/daily/: 2024-01-20.html
_site/ideas/: knowledge-management.html
_site/programming/: python-tips.html
_site/projects/: foam-ssg.html
_site/tools/: foam.html  obsidian.html
others/: foam-ssg-c.txt
test-notes/: index.md  note-1.md  note-2.md
test-notes/concepts/: markdown.md  wiki-links.md
test-notes/daily/: 2024-01-20.md
test-notes/ideas/: knowledge-management.md
test-notes/programming/: python-tips.md
test-notes/projects/: foam-ssg.md
test-notes/tools/: foam.md  obsidian.md
